assets/css/style.css
/* ... */
.no-padding {
    padding: 0 !important;
    margin:0 !important;
}
.fluid-blocks-col {
    padding: 70px 40px 0 80px;
}
.fluid-blocks-col-right {
    padding: 70px 80px 0 40px;
}
/*
Separator
*/
.separator {
    height: 2px;
    width: 6%;
    margin: auto;
    display: inline-block;
	border-bottom:2px solid #ddd;
}

/*
Button
*/
.btn-primary.active.focus,
.btn-primary.active:focus,
.btn-primary.active:hover,
.btn-primary:active.focus,
.btn-primary:active:focus,
.btn-primary:active:hover,
.open > .dropdown-toggle.btn-primary.focus,
.open > .dropdown-toggle.btn-primary:focus,
.open > .dropdown-toggle.btn-primary:hover,
.btn-primary.focus,
.btn-primary:focus,
.btn-primary.disabled,
.btn-primary.disabled:hover {
    color: #ffffff;
    background-color: #f56363;
    border-color: #f56363;
}



.btn {
    border: 1px solid #3c3c3c;
    display: inline-block;
    min-width: 160px;
    padding: .8em;
    height: 50px;
    text-align: center;
    color: #fff;
    font-style: normal;
    letter-spacing: 1px;
    margin: 0;
    font-size: 16px;
    font-weight: 300;
    border-radius: 0;
    margin-top: 30px;
}
.btn:hover {
	background-color:none;
	color: #fff;
	text-decoration: none;
}

.btn-primary {
    color: #fff;
    background-color: #70c92f;
    border-color: #70c92f;
    transition: .6s;	
}
.btn-primary:hover{
	color: #f3ffeb;
    background-color: #56b90e;
    border-color: #56b90e;
}

.pink-btn {
    background: #fff;
    border: 1px solid #222222;
    margin-left: 10px;
    color: #222222;
    transition: .6s;
}

.pink-btn:hover {
	background-color: #ea6060;
	color: #fff;
	text-decoration: none;
	border:1px solid #ea6060;
}

.btn-white{
	border:1px solid #fff;
	color:#fff;
	border-radius:5px;
	background: rgba(255, 255, 255, 0.24);
}
.btn-white:hover{
	border:1px solid #70c92f;
	color:#70c92f;
}
.btn-lg{
    width: 230px;
    height: 52px;
    text-transform: uppercase;
    color: #fff;
    background: rgba(0, 0, 0, 0.31);
    border: 0;
    padding: 1rem;
    letter-spacing: 5px;
	transition:.5s;
}
.btn-lg:hover{
	color:#70c92f;
}


/*.btn-default:active, .btn-default:hover  {
    background: transparent;
}*/


/*
Extra height css
*/
.margin-top-20 {
    margin-top: 20px;
}
.margin-bottom-20 {
    margin-bottom: 20px;
}
.margin-top-40 {
    margin-top: 40px;
}
.margin-bottom-40 {
    margin-bottom: 40px;
}
.margin-top-80 {
    margin-top: 80px;
}
.margin-80 {
    margin-top: 80px;
    margin-bottom: 80px;
}
.margin-bottom-60 {
    margin-bottom: 60px;
}
.margin-top-80 {
    margin-top: 80px;
}
.margin-bottom-80 {
    margin-bottom: 80px;
}
.padding-top-20 {
    padding-top: 1.33rem;
}
.padding-bottom-20 {
    padding-bottom: 1.33rem;
}
.padding-top-40 {
    padding-top: 2.66rem;
}
.padding-bottom-40 {
    padding-bottom: 2.66rem;
}
.padding-top-60 {
    padding-top: 5rem;
}
.padding-bottom-60 {
    padding-bottom: 5rem;
}
.padding-bottom-0 {
    padding-bottom: 0;
}
/*padding*/
.padding-twenty {
    padding: 10px 0;
}
.padding-fourty {
    padding: 20px 0;
}
.padding-sixty {
    padding: 30px 0;
}
.padding-eighty {
    padding: 40px 0;
}
h1 span {
    color: #f56363;
    font-weight: 400;
}

/*for placeholder changes*/

/*input::-webkit-input-placeholder {
  color: #CACACA;
  font-size: 18px;
}
input::-moz-placeholder {
  color: #CACACA;
  font-size: 18px;
}
input:-ms-input-placeholder {
  color: #CACACA;
  font-size: 18px;
}*/

/*for image bg*/


/*.img-bg{
  background: url(../images/home-msg.jpg) no-repeat center top fixed;
  background-size
  -moz-background-size: cover;
  -webkit-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  width: 100%;
  overflow: hidden;
}*/
/* navbar section */
.menu-scroll {
    padding-top: 0px;
    padding-bottom: 0px;
    position: fixed;
    top: 0; 
	left: 0; 
	right: 0; 
	z-index: 300;
    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
    background-color: #fff;
	color:#ffd600;
	
}

.main_menu_bg{
	margin-top:0px;
}
.main_menu_bg .navbar-default {
    background-color: transparent; 
    border-color: transparent; 
	transition:.6s;
}

.main_menu_bg .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus{
	color:#fff;
	background-color:transparent;
}
 
.menu-scroll.main_menu_bg .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus{
	color:#ffd600;
	background-color:transparent;
}

.main_menu_bg .navbar {
    margin-bottom:0px;
}


.main_menu_bg .navbar-nav>li>a {
    padding-top: 10px;
    padding-bottom: 10px;
    line-height: 20px;
	border-radius:10px;
	font-family: 'big_johnregular';
	text-transform:uppercase;
	font-size:18px;
}



/* Home Section */

.main_area{
	width:100%;
	overflow:hidden;
}
.home{
	background:url(../images/homebg.jpg) no-repeat top center;
	background-size:cover;
	
}
.main_home_content .logo_img{
	margin-bottom:40px;
}

.main_home_content h2{
	font-size:60px;
	color:#70c92f;
	text-transform:uppercase;
	font-family: 'open_sanslight';
	line-height:4rem;
}
.main_home_content p{
    font-size: 24px;
    color: #fff;
    max-width: 45%;
    margin: 0 auto;
    line-height: 2.5rem;
    padding: 20px 0px;
}



/* about Section */
.user_seperator{
    position: absolute;
    left: 45%;
    top:-140px;
    z-index: 99;
}
.user_seperator a i{
    background: #000;
    width: 100px;
    height: 100px;
    padding: 1em;
    font-size: 40px;
    color: #ddd;
    border-radius: 50%;
    border: 2px solid #ddd;	
}
.about{
    background: url(../images/aboutbg.jpg) no-repeat 100% 100%;
    background-size: cover; 
	position:relative;	
		
}


.about_overlay{
    background: rgba(255, 255, 255, 0.50);
    width: 100%;
    padding: 130px 100px 321px 100px;
	
}

.head_title h2{
	color:#70c92f;
	font-size:38px;
	font-family: 'coolveticaregular';
}
.head_title h2 i{
	font-size: 20px;
    padding: 5px 15px;
}
.main_about_content{}
.about_top_content{
	margin-top:30px;
	
}
/* ... */

